# socketapp

./: README.md  pyproject.toml
example/: __main__.py  client.py  events.py  server.py
socketapp/: __init__.py  client.py  event.py  server.py
